devel
-----

* Fixed issue ES-664: the optimizer rule `inline-subqueries` must pull out
  subqueries that contains a COLLECT statement if the subquery is itself called
	from within a loop. Otherwise the COLLECT will be applied to the values in the
	outer FOR loop, which can produce a different result.

* Fixed a blockage on hotbackup when writes are happening concurrently, since
  followers could no longer replicate leader transactions.

* Updated arangosync to 0.7.9.

* Fixed hotbackup S3 credentials validation and error reporting for upload
  and download.

* Make AQL user-defined functions (UDFs) work in a cluster in case the UDF runs
  an AQL query inside its own function code (BTS-159).

* Fix: writeConcern is now honored correctly (ES-655).

* Fix: The 'sorted' COLLECT variant would return undefined instead of null when
  grouping by a null value.

* Hard-code returned "planVersion" attribute of collections to a value of 1.
  Before 3.7, the most recent Plan version from the agency was returned inside
  "planVersion".
  In 3.7, the attribute contained the Plan version that was in use when the 
  in-memory LogicalCollection object was last constructed. The object was
  always reconstructed in case the underlying Plan data for the collection
  changed or when a collection contained links to arangosearch views.
  This made the attribute relatively useless for any real-world use cases, and
  so we are now hard-coding it to simplify the internal code. Using the attribute
  in client applications is also deprecated.

* Slightly improve the performance of cluster DDL maintenance operations.

* Don't prevent concurrent synchronization of different shards from the same
  database. Previously only one shard was synchronized at a time per database.

* Fixed OASIS-278 issue: Added proper sort/calc nodes cleanup for late materialzation
  after OneShard optimization
  
* Improve performance of many non-subquery AQL queries, by optimizing away