@@ -146,10 +146,12 @@ void waitImpl(Future<T>& f) {
   Promise<T> p;
   Future<T> ret = p.getFuture();
   f.thenFinal([p(std::move(p)), &cv, &m](Try<T>&& t) mutable {
-    {
-      std::lock_guard<std::mutex> guard(m);
-      p.setTry(std::move(t));
-    }
+    // We need to hold this mutex, while sending the notify.
+    // Otherwise the future ret may be ready and thereby leaving this function
+    // which would free the condtion variable, before sending notify.
+    // This is one of the rare cases where notify without lock would cause undefined behaviour.
+    std::lock_guard<std::mutex> guard(m);
+    p.setTry(std::move(t));
     cv.notify_one();
   });
   std::unique_lock<std::mutex> lock(m);
@@ -170,10 +172,12 @@ void waitImpl(Future<T>& f, std::chrono::time_point<Clock, Duration> const& tp) 
   Promise<T> p;
   Future<T> ret = p.getFuture();
   f.thenFinal([p(std::move(p)), &cv, &m](Try<T>&& t) mutable {
-    {
-      std::lock_guard<std::mutex> guard(m);
-      p.setTry(std::move(t));
-    }
+    // We need to hold this mutex, while sending the notify.
+    // Otherwise the future ret may be ready and thereby leaving this function
+    // which would free the condtion variable, before sending notify.
+    // This is one of the rare cases where notify without lock would cause undefined behaviour.
+    std::lock_guard<std::mutex> guard(m);
+    p.setTry(std::move(t));
     cv.notify_one();
   });
   std::unique_lock<std::mutex> lock(m);
